K8s/traefik-ingress/traefik-ingressroute.yml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: argocd-server
#   namespace: argocd
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`argocd.michalkozak.cz`)
#       kind: Rule
#       services:
#         - name: argocd-server
#           port: 80
#       middlewares:
#         - name: security
#           namespace: default
#     - match: Host(`argocd.michalkozak.cz`) && Headers(`Content-Type`, `application/grpc`)
#       kind: Rule
#       services:
#         - name: argocd-server
#           port: 80
#           scheme: h2c
#       middlewares:
#         - name: security
#           namespace: default
#   tls:
#     certResolver: myresolver
#     options:
#       name: kazumatlsoption
#       namespace: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-tls
  namespace: default
spec:
  routes:
    - match: Host(`kazuma.michalkozak.cz`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # middlewares:
      #   - name: basic-auth
      #   - name: security
  tls:
    certResolver: letsencrypt
    # options:
    #   name: kazumatlsoption
    #   namespace: default

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: archiv
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`archiv.michalkozak.cz`)
#       kind: Rule
#       services:
#         - name: caddy
#           port: 30081
#       middlewares:
#         - name: security

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: archiv-tls
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`archiv.michalkozak.cz`)
#       kind: Rule
#       services:
#         - name: caddy
#           port: 30081
#       middlewares:
#         - name: security
#   tls:
#     certResolver: myresolver
#     options:
#       name: kazumatlsoption
#       namespace: default

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: web
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`michalkozak.cz`,`www.michalkozak.cz`)
#       kind: Rule
#       services:
#         - name: caddy
#           port: 30080
#       middlewares:
#         - name: security
#         - name: removewww

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: web-tls
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`michalkozak.cz`,`www.michalkozak.cz`)
#       kind: Rule
#       services:
#         - name: caddy
#           port: 30080
#       middlewares:
#         - name: security
#         - name: removewww
#   tls:
#     certResolver: myresolver
#     options:
#       name: kazumatlsoption
#       namespace: default
